[gd_scene load_steps=7 format=3 uid="uid://5xelik0mfram"]

[ext_resource type="Script" path="res://src/game/reward.gd" id="1_vghku"]
[ext_resource type="Texture2D" uid="uid://c452l632h5qru" path="res://assets/wood.png" id="2_xkpa3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywua4"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.147672, 0.147672, 0.147672, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_bchaq"]
font_size = 26

[sub_resource type="LabelSettings" id="LabelSettings_iomvd"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_p5m6t"]
font_color = Color(0.67069, 0.67069, 0.67069, 1)

[node name="Reward" type="PanelContainer" node_paths=PackedStringArray("name_label", "count_label", "info_label", "icon")]
custom_minimum_size = Vector2(200, 200)
offset_right = 200.0
offset_bottom = 200.0
pivot_offset = Vector2(100, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_ywua4")
script = ExtResource("1_vghku")
name_label = NodePath("VBoxContainer/Name")
count_label = NodePath("VBoxContainer/TextureRect/Count")
info_label = NodePath("VBoxContainer/Info")
icon = NodePath("VBoxContainer/TextureRect")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2_xkpa3")
expand_mode = 1
stretch_mode = 5

[node name="Count" type="Label" parent="VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -25.5
offset_right = 44.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "x6"
label_settings = SubResource("LabelSettings_bchaq")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wood"
label_settings = SubResource("LabelSettings_iomvd")
horizontal_alignment = 1

[node name="Info" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Strength: 10"
label_settings = SubResource("LabelSettings_p5m6t")
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
